# book-insight

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.claude/commands/: audit.md  checkpoint.md  end.md  monthly.md  start.md  weekly.md
apps/api/: .env.example  pyproject.toml
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/ai/: client.py
apps/api/src/ai/tasks/: __init__.py  chapter.py  character.py  character_analyzer.py
apps/api/src/core/: book.py
apps/api/src/knowledge/: __init__.py  models.py
apps/api/src/rag/: retriever.py  store.py
apps/api/src/routers/: analysis.py  books.py  rag.py
apps/api/src/utils/: __init__.py  logger.py  validators.py
apps/web/: .eslintrc.cjs  index.html  package.json  tailwind.config.js
apps/web/src/: App.jsx  index.css  main.jsx
apps/web/src/components/: ThemeSwitcher.jsx
apps/web/src/hooks/: useCharacterAnalysis.js
docs/ai-context/: CONTEXT.md  CURRENT.md  PROJECT.md
docs/character-analysis/: README.md  赵秦.md
docs/development/: ARCHITECTURE.md
docs/development/api/: ai-tasks.md  character-analysis.md  data-storage.md  models.md  routers.md
docs/development/web/: hooks.md  pages.md  stores.md
docs/guides/: README.md  llm-config.md
docs/深度排查/: 排查报告-2025-12-10-v2.md  排查报告-2025-12-10.md  排查报告-2025-12-11.md  排查报告-2025-12-12.md  数据完整性修复计划-2025-12-11.md  文档审计报告-2025-12-12.md
scripts/: analyze.py  analyze_character.py  analyze_zhaoqin_deep.py  continue_zhaoqin_analysis.py  fix_zhaoqin_data.py  migrate_data.py  reanalyze_zhaoqin.py
scripts/lib/: __init__.py  api_client.py
(+10 files in other folders)
